# rmcs_relocation

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugins.xml
config/: location.yaml  rmuc.yaml  rviz.rviz
docs/: drift_quantification_and_health_tuning.md  local_navigation_safe_snapshot_plan.md  mid360_mapping_and_initial_relocalization_manual.md  rviz_visualization.md  sc_local_plan.md  scancontext_plan.md  srv_migration.md  test_usage_manual.md  three_mode_refactor_plan.md
launch/: location.launch.py  rviz.launch.py
scripts/: generate_map_descriptors.py  pcd_publisher.py  relocalize_trigger.py  test_supervisor.py  tf_to_pose.py
src/common/: pimpl.hpp
src/component/: supervisor.cpp  supervisor.hpp
src/server/: collector.cpp  collector.hpp  health_monitor.cpp  health_monitor.hpp  main.cpp  map_descriptor_db.cpp  map_descriptor_db.hpp  runtime.cpp  runtime.hpp  validator.cpp  validator.hpp
src/tools/: CMakeLists.txt  geometry_tools.cpp  geometry_tools.hpp  numeric_tools.cpp  numeric_tools.hpp  param_tools.cpp  param_tools.hpp  registration_tools.cpp  registration_tools.hpp  scan_context.cpp  scan_context.hpp
srv/: Relocalize.srv
test/: CMakeLists.txt  helpers.cpp  helpers.hpp  test_health_monitor.cpp  test_registration.cpp  test_scan_context.cpp  test_validator.cpp
