<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmcs-relocation</name>
  <version>0.0.0</version>
  <description>Relocalization server and RMCS supervisor component.</description>
  <maintainer email="dev@rmcs.local">rmcs</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rmcs_executor</depend>
  <depend>rmcs_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
